--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mysql-connector-java-5.0.7-bin.jar=D:\\Documents\\GitHub\\FinalFantasyGuild\\src\\Data\\mysql-connector-java-5.0.7-bin.jar
 user.properties.file=C:\\Users\\jessi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
